[package]
name = "writer_rs"
version = "0.1.0"
authors = ["johnbox <johnboxwon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
pprof = { version = "0.4.0", features = ["protobuf"] }

